force-app/main/default/objects/Product2/fields/cgcloud__Product_Form__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Form__c</fullName>
    <description>Defines the state of the product.</description>
    <label>Product Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solid</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>