force-app/main/default/objects/Product2/fields/TPM_BattDeviceTypeID__c.field-meta.xml
<CustomField>
    <fullName>TPM_BattDeviceTypeID__c</fullName>
    <description>Indicates the ID of the battery device type</description>
    <label>Battery Device Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>