force-app/main/default/objects/Product2/fields/TPM_BrandID__c.field-meta.xml
<CustomField>
    <fullName>TPM_BrandID__c</fullName>
    <description>Indicates the ID of the Duracell Brand</description>
    <label>Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>