force-app/main/default/objects/Product2/fields/TPM_BrandNM__c.field-meta.xml
<CustomField>
    <fullName>TPM_BrandNM__c</fullName>
    <description>Indicates the name of the Duracell Brand</description>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duracell</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Procell</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Rocket</fullName>
            </value>
            <value>
                <fullName>Sunpower</fullName>
            </value>
            <value>
                <fullName>Mallory</fullName>
            </value>
            <value>
                <fullName>Unallocated</fullName>
            </value>
            <value>
                <fullName>Intermediates</fullName>
            </value>
            <value>
                <fullName>Finacial</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Not Duracell Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>