force-app/main/default/objects/Product2/fields/TPM_Case_UPC__c.field-meta.xml
<CustomField>
    <fullName>TPM_Case_UPC__c</fullName>
    <label>Case UPC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>