force-app/main/default/objects/Product2/fields/TPM_CategoryID__c.field-meta.xml
<CustomField>
    <fullName>TPM_CategoryID__c</fullName>
    <description>Indicates the ID of the Duracell Category</description>
    <label>Category ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>