force-app/main/default/objects/Product2/fields/TPM_Dist_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>TPM_Dist_Channel_ID__c</fullName>
    <description>Distribution Channel ID of the product populated by integration</description>
    <label>Distribution Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>