force-app/main/default/objects/Product2/fields/TPM_Dist_Channel_Nm__c.field-meta.xml
<CustomField>
    <fullName>TPM_Dist_Channel_Nm__c</fullName>
    <description>Distributed Channel Name of the product populated by integration</description>
    <label>Distribution Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>