force-app/main/default/objects/Product2/fields/TPM_Is_Display__c.field-meta.xml
<CustomField>
    <fullName>TPM_Is_Display__c</fullName>
    <description>To Filter out BOM / Display Products.</description>
    <label>Is Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>