force-app/main/default/objects/Product2/fields/TPM_Item_UPC__c.field-meta.xml
<CustomField>
    <fullName>TPM_Item_UPC__c</fullName>
    <label>Item UPC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>