force-app/main/default/objects/Product2/fields/TPM_Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>TPM_Pack_Size__c</fullName>
    <description>Custom field holding the Standard Pack Size Value</description>
    <formula>cgcloud__Pack_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pack Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>