force-app/main/default/objects/Product2/fields/TPM_PackSizeID__c.field-meta.xml
<CustomField>
    <fullName>TPM_PackSizeID__c</fullName>
    <description>Indicates the ID of the product&apos;s pack size</description>
    <label>Pack Size ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>