force-app/main/default/objects/Product2/fields/TPM_ReportGroupID__c.field-meta.xml
<CustomField>
    <fullName>TPM_ReportGroupID__c</fullName>
    <description>Indicate the ID of the Report Group the product belongs to</description>
    <label>Report Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>