force-app/main/default/objects/Product2/fields/TPM_SAP_IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>TPM_SAP_IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deleted flag in SAP master data for Product</description>
    <label>SAP Is Deleted</label>
    <type>Checkbox</type>
</CustomField>