force-app/main/default/objects/Product2/fields/TPM_SAP_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>TPM_SAP_Sales_Org__c</fullName>
    <description>Sales Org ID of the Product populated by integration</description>
    <label>SAP Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Sales_Org</valueSetName>
    </valueSet>
</CustomField>