force-app/main/default/objects/Product2/fields/TPM_SubcategoryID__c.field-meta.xml
<CustomField>
    <fullName>TPM_SubcategoryID__c</fullName>
    <description>Indicates the ID of the Duracell Subcategory</description>
    <label>Sub Category ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>