force-app/main/default/objects/Product2/fields/TPM_SubcategoryNM__c.field-meta.xml
<CustomField>
    <fullName>TPM_SubcategoryNM__c</fullName>
    <description>Indicates the name of the Duracell Subcategory</description>
    <label>Sub Category Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Major Cells</fullName>
            </value>
            <value>
                <fullName>Specialty Alkaline</fullName>
            </value>
            <value>
                <fullName>HP Lithium</fullName>
            </value>
            <value>
                <fullName>Lithium Coin</fullName>
            </value>
            <value>
                <fullName>Silver Oxide</fullName>
            </value>
            <value>
                <fullName>Hearing Aid (Zinc Air)</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Rechargeable Major Cells</fullName>
            </value>
            <value>
                <fullName>Charger</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
            <value>
                <fullName>Intermediates</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Not Duracell Product</fullName>
            </value>
            <value>
                <fullName>PORTABLE POWER STATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>