force-app/main/default/objects/Product2/fields/TPM_Top_NodeId__c.field-meta.xml
<CustomField>
    <fullName>TPM_Top_NodeId__c</fullName>
    <description>Indicates the ID of the Top Node of the Hierarchy</description>
    <label>Top Node ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>