force-app/main/default/objects/Product2/recordTypes/cgcloud__Product_Group.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Product_Group</fullName>
    <active>true</active>
    <description>This record type is for creating CGCloud Product Groups</description>
    <label>Product Group</label>
</RecordType>